update auth handler refresh token
